Draggable divs can no longer be dragged off screen, and resize dynamically to fit user screen size to be more mobile friendly

--- a/style.css
+++ b/style.css
@@ -54,8 +54,10 @@ body {
     background-color: #f1f1f1;
     border: 1px solid #d3d3d3;
     border-radius: 5px;
-    width: 500px;
     padding: 0px 0px 10px;
+    /* Maximum width for smaller screents */
+    width: 500px;
+    max-width: 90%;
 }
 
 .draggable-header {
